# gipDarknet

./: CMakeLists.txt  README.md
assets/files/: coco.data
examples/GlistApp_Darknet/src/: gCanvas.cpp  gCanvas.h
libs/lib/macos/: libdarknet.dylib
libs/src/darknet/: gemm.c  image.c  network.c  yolo_layer.c
src/: gipDarknet.cpp  gipDarknet.h
